<resources>
    <string name="app_name">TestRealSoftProject</string>
    <string name="collective">Collective</string>
    <string name="welcome">Tizimiga xush kelibsiz</string>
    <string name="text_ESI">ESI bilan davom etirish</string>
    <string name="or">Yoki</string>
    <string name="edit_text_login_hint">Login yoki email</string>
    <string name="password">Parol</string>
    <string name="error_login_or_password">Неверный логин или пароль</string>
    <string name="next">Kirish</string>
    <string name="developed_by">Developed by</string>
    <string name="today">Bugun</string>
    <string name="documents">Hujjatlar</string>
    <string name="chat">Chat</string>
    <string name="work_plan">Ish reja</string>
    <string name="task">Vazifa</string>
    <string name="name">Xasanov B.</string>
    <string name="edo_096">EDO-096</string>
    <string name="description">Consectetur adipiscing elit duis tristique sollicitudin nibh commodo</string>
    <string name="date">15 may, 2020</string>
    <string name="title">Ijroda</string>
    <string name="number">18</string>
    <string name="search">Izlash...</string>
    <string name="cancel">Bekor qilish</string>
    <string name="flores_juanita">Flores Juanita</string>
    <string name="you">Siz</string>
    <string name="message">Consectetur adipiscing elit duis tristique sollicitudin nib</string>
    <string name="time">0:05</string>
    <string name="online">online</string>
    <string name="file_text">Collective API.postman.json</string>
    <string name="_16_7_kb">16.7 kb</string>
    <string name="left_text">Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud. </string>
    <string name="right_text">Exercitation veniam consequat sunt nostrud amet 😊</string>
    <string name="message_sending">Xabar yuborish...</string>
    <string name="new_task">Yangi vazifa</string>
    <string name="new_task_message">Qurilish vazirligi bilan uchrashuv tashkil etish tashkil etish tashkilasd</string>
    <string name="du">DU</string>
</resources>